--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,13 +17,7 @@ security:
 
 # pour auth
 
-        oauth_authorize:
-            pattern:    ^/oauth/v2/auth
-            form_login:
-                 provider: fos_userbundle
-                 check_path: /oauth/v2/auth/login_check
-                 login_path: /oauth/v2/auth/login
-            anonymous: true
+
         api:
                     pattern:    ^/api
                     fos_oauth:  true
@@ -39,15 +33,18 @@ security:
                 login_path: /login
                 check_path: /login_check
 
-            anonymous: true
             logout:
               path: /logout
               target: /
-                # if you are using Symfony < 2.8, use the following config instead:
-                # csrf_provider: form.csrf_provider
-
             logout:       true
             anonymous:    true
+        oauth_authorize:
+              pattern:    ^/oauth/v2/auth
+#              form_login:
+#                   provider: fos_userbundle
+#                   check_path: /login_check
+#                   login_path: /login
+              anonymous: true
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
