--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,7 +11,6 @@ services:
             class:     ApiBundle\Service\StripeService
             arguments: ['%URL_API%']
 
-app.exception_listener:
-        class: ApiBundle\EventListener\ExceptionListener
-        tags:
-            - { name: kernel.event_listener, event: kernel.exception }
+     api.service.manager.stripe:
+            class:    ApiBundle\Manager\ClientStripe
+            arguments: ['@doctrine.orm.entity_manager','@app.service_stripe']
